@@ -1,6 +1,4 @@
 concentration-meter-body.png author=PhET notes=copied intensity_meter_box.png from bending-light
 concentration-meter-probe.png author=PhET notes=copied and hacked intensity_meter_probe.png from bending-light
-dropper-icon.png author=PhET notes=scaled version of dropper.png
-dropper.png author=laobc source=http://www.openclipart.org/detail/63955/dropper-by-laobc license=public domain notes=provided by Sam Reid from [54416] of sugar-and-salt-solutions
 shaker-icon.png author=PhET
 shaker.png author=PhET notes=copied salt_micro.png from sugar-and-salt-solutions
