@@ -8,7 +8,6 @@ import edu.colorado.phet.beerslawlab.BLLResources.Images;
 import edu.colorado.phet.beerslawlab.BLLSimSharing.UserComponents;
 import edu.colorado.phet.beerslawlab.dev.DebugOriginNode;
 import edu.colorado.phet.beerslawlab.model.Dropper;
-import edu.colorado.phet.common.phetcommon.application.PhetApplication;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
@@ -24,29 +23,29 @@ import edu.umd.cs.piccolo.nodes.PImage;
  */
 public class DropperNode extends PhetPNode {
 
-    private static final double BUTTON_Y_OFFSET = 60; // y offset of button center in dropper image file
-    private static final double LABEL_Y_OFFSET = 255; // y offset of the label's center in dropper image file
+    private static final boolean SHOW_ORIGIN = false;
+    private static final double BUTTON_Y_OFFSET = 30; // y offset of button center in dropper image file
+    private static final double LABEL_Y_OFFSET = 125; // y offset of the label's center in dropper image file
 
     public DropperNode( final Dropper dropper ) {
-        scale( 0.5 ); //TODO eliminate need for scaling
 
         final PImage imageNode = new PImage( Images.DROPPER );
         addChild( imageNode );
         imageNode.setOffset( -imageNode.getFullBoundsReference().getWidth() / 2, -imageNode.getFullBoundsReference().getHeight() );
 
-        final HTMLNode labelNode = new HTMLNode( "", Color.BLACK, new PhetFont( Font.BOLD, 30 ) );
+        final HTMLNode labelNode = new HTMLNode( "", Color.BLACK, new PhetFont( Font.BOLD, 15 ) );
         addChild( labelNode );
 
         // On/off button
         MomentaryButtonNode buttonNode = new MomentaryButtonNode( UserComponents.dropperButton, dropper.on, dropper.enabled ) {{
-            scale( 0.65 );
+            scale( 0.3 );
         }};
         addChild( buttonNode );
         buttonNode.setOffset( imageNode.getFullBoundsReference().getCenterX() - ( buttonNode.getFullBoundsReference().getWidth() / 2 ),
                               imageNode.getFullBoundsReference().getMaxY() - ( imageNode.getFullBoundsReference().getHeight() - BUTTON_Y_OFFSET ) - ( buttonNode.getFullBoundsReference().getHeight() / 2 ) );
 
         // origin debugging
-        if ( PhetApplication.getInstance().isDeveloperControlsEnabled() ) {
+        if ( SHOW_ORIGIN ) {
             addChild( new DebugOriginNode() );
         }
 
